--- a/js/locales/de-de.json
+++ b/js/locales/de-de.json
@@ -1,9 +1,6 @@
 {
     "modal_search": "Suchen",
-    "modal_close": "Schliessen",
-    "modal_edit": "Bearbeiten",
     "modal_cancel": "Abbrechen",
-    "modal_more": "Weiteres...",
     "modal_next": "Weiter",
     "modal_ok": "OK",
     "modal_done": "Fertig",
@@ -16,12 +13,13 @@
     "group_modal_menu_more": "Weiteres",
     "group_modal_menu_delete_photo": "Bild löschen",
     "group_modal_menu_edit_group": "Gruppe bearbeiten",
-    "group_modal_menu_leave": "Verlassen",
+    "group_modal_menu_leave_group": "Gruppe verlassen",
     "group_modal_menu_delete_chat": "Chat löschen",
     "group_modal_settings": "Einstellungen",
     "group_modal_notifications": "Benachrichtigungen",
     "group_modal_members": "Mitglieder",
     "group_modal_members_kick": "Entfernen",
+    "group_modal_members_unavailable": "Liste der Gruppenmitglieder ist nicht verfügbar.",
     "country_select_modal_title": "Land",
     "settings_modal_title": "Einstellungen",
     "settings_modal_menu_more": "Weiteres",
@@ -31,7 +29,7 @@
     "settings_modal_edit_profile": "Profil bearbeiten",
     "settings_modal_edit_username": "Benutzername ändern",
     "settings_modal_empty_username_set": "Benutzername festlegen",
-    "settings_modal_terminate_sessions": "Andere Sitzungen beenden",
+    "settings_modal_terminate_sessions": "Alle Sitzungen beenden",
     "settings_modal_settings": "Einstellungen",
     "settings_modal_notification_alert": "Benachrichtigungen",
     "settings_modal_vibrate": "Vibrieren",
@@ -63,8 +61,8 @@
     "user_modal_delete_contact": "Kontakt entfernen",
     "user_modal_add_contact": "Zu Kontakten hinzufügen",
     "user_modal_share_contact": "Kontakt teilen",
-    "user_modal_block_user": "Kontakt blockieren",
-    "user_modal_unblock_user": "Kontakt freigeben",
+    "user_modal_block_user": "Benutzer blockieren",
+    "user_modal_unblock_user": "Benutzer nicht mehr blockieren",
     "user_modal_delete_chat": "Chat löschen",
     "user_modal_info": "Info",
     "user_modal_phone": "Telefon",
@@ -87,9 +85,9 @@
     "user_first_name_deleted": "GELÖSCHT",
     "user_status_online": "online",
     "user_status_last_seen": "zuletzt gesehen: {0}",
-    "user_status_recently": "zuletzt kürzlich gesehen",
-    "user_status_last_week": "innerhalb einer Woche gesehen",
-    "user_status_last_month": "diesen Monat gesehen",
+    "user_status_recently": "kürzlich zuletzt gesehen",
+    "user_status_last_week": "zuletzt gesehen innerhalb einer Woche",
+    "user_status_last_month": "zuletzt gesehen innerhalb eines Monats",
     "user_status_long_ago": "vor langer Zeit zuletzt gesehen",
     "chat_title_deleted": "GELÖSCHT",
     "format_size_progress_mulitple": "{done} von {total} {parts}",
@@ -116,7 +114,6 @@
     "confirm_modal_clipboard_file_send": "Willst du wirklich die Datei(en) aus der Zwischenablage senden?",
     "confirm_modal_clipboard_X_files_send": "{'one': 'Wirklich die Datei aus der Zwischenablage senden?', 'other': 'Wirklich die {} Dateien aus der Zwischenablage senden?'}",
     "confirm_modal_message_delete": "Willst du diese Nachricht wirklich löschen?",
-    "confirm_modal_photo_delete": "Möchtest du wirklich das Foto löschen?",
     "confirm_modal_contacts_import": "Telegram wird nun deine Kontakte synchronisieren, um deine Freundesliste zusammenzustellen.",
     "confirm_modal_login_phone_correct": "Stimmt die Nummer wirklich?",
     "confirm_modal_forward_to_peer": "An {peer} weiterleiten?",
@@ -132,7 +129,6 @@
     "confirm_modal_clipboard_files_send_submit": "Senden",
     "confirm_modal_clipboard_file_send_submit": "Senden",
     "confirm_modal_message_delete_submit": "Löschen",
-    "confirm_modal_photo_delete_submit": "Löschen",
     "confirm_modal_forward_message_submit": "Nachricht weiterleiten",
     "confirm_modal_share_photo_submit": "Bild weiterleiten",
     "confirm_modal_share_video_submit": "Video weiterleiten",
@@ -145,10 +141,6 @@
     "contacts_modal_title": "Kontakte",
     "contacts_modal_new_contact": "Neuer Kontakt",
     "contacts_modal_empty_list": "Deine Kontaktliste ist leer. Du kannst {import-link: einen neuen Kontakt} per Telefonnumer hinzufügen.",
-    "conversations_modal_forward_title": "Weiterleiten",
-    "conversations_modal_forward_submit": "Weiterleiten",
-    "conversations_modal_select_recipients": "Empfänger wählen",
-    "conversations_modal_recipients": "Empfänger:",
     "contact_edit_modal_first_name": "Vorname",
     "contact_edit_modal_last_name": "Nachname",
     "contact_edit_modal_title": "Kontakt bearbeiten",
@@ -213,7 +205,6 @@
     "error_modal_phonebook_required_description": "Telegram benötigt Zugriff aufs Telefonbuch um Kontakte zu importieren.",
     "error_modal_username_occupied_description": "Benutzername ist leider schon belegt.",
     "error_modal_media_not_supported_description": "Dein Browser kann diese Mediendatei nicht wiedergeben. Lade die Datei herunter und versuche sie mit einem externen Player zu öffnen.",
-    "error_modal_username_not_found_description": "Es gibt leider kein Telegram Konto mit dem Benutzernamen.",
     "error_modal_bad_request_description": "Eine Parameter fehlt oder ist ungültig.",
     "error_modal_unauthorized_description": "Diese Aktion benötigt autorisierten Zugriff. Bitte {login-link: melde dich an}.",
     "error_modal_forbidden_description": "Diese Aktion ist für dich nicht erlaubt.",
@@ -222,15 +213,13 @@
     "error_modal_internal_description": "Ein interner Serverfehler ist aufgetreten. Bitte versuche es später wieder.",
     "error_modal_tech_details": "Hier gibt es die technischen Details",
     "error_modal_multiple_open_tabs": "Bitte andere Telegram App Tabs schliessen.",
-    "head_telegram": "Telegram",
     "head_new_group": "Neue Gruppe",
     "head_new_contact": "Neuer Kontakt",
     "head_contacts": "Kontakte",
     "head_contacts_title": "Kontakte",
-    "head_telegram_faq": "Telegram FAQ",
+    "im_found_title": "Globale Suche",
     "head_settings": "Einstellungen",
     "head_log_out": "Abmelden",
-    "head_peer_more": "Weiteres",
     "head_edit_messages": "Nachrichten bearbeiten",
     "head_media_photos": "Bilder",
     "head_media_video": "Videos",
@@ -254,7 +243,6 @@
     "im_contacts_title": "Kontakte",
     "im_settings": "Einstellungen",
     "im_conversations": "Unterhaltungen",
-    "im_found_title": "Globale Suche",
     "im_messages": "Nachrichten",
     "im_no_contacts": "Noch keine Kontakte",
     "im_get_started_long": "Beginne mit dem Hinzufügen von Kontakten",
@@ -292,9 +280,7 @@
     "login_sign_in": "Anmelden",
     "login_enter_number_description": "Land auswählen und Nummer eintragen",
     "login_incorrect_number": "Falsche Telefonnummer",
-    "login_code_input_placeholder": "Code",
-    "login_tel_input_placeholder": "Telefonnummer",
-    "login_country_select_placeholder": "Land",
+    "login_tel_input_placeholder": "Telefonnumer eingeben",
     "login_generating_key": "Schlüssel werden erstellt",
     "login_generating_keys_info": "Schlüssel werden nur einmalig generiert, was auf langsamen Geräten eine Weile dauern könnte. Bitte ein wenig Geduld haben.",
     "login_edit_number": "Telefonnummer bearbeiten",
@@ -315,12 +301,6 @@
     "login_last_name": "Nachname",
     "login_signing_up": "Registriere",
     "login_sign_up": "Registrieren",
-    "login_about_title": "Info",
-    "login_about_desc1_md": "Die **Telegram Weboberfläche** ist schnell und vor allem sicher und installationsfrei in jedem aktuellen Webbrowser nutzbar.",
-    "login_about_desc2_md": "Chats werden mit der **Telegram Cloud** synchronisiert, so dass man alles von jedem Endgerät aus einsehen kann.",
-    "login_about_desc3_md": "Unser {source-link: Quelltext} ist öffentlich, jeder kann mithelfen.",
-    "login_about_intro": "Willkommen bei der offiziellen Telegram Weboberfläche.",
-    "login_about_learn": "Weitere Informationen",
     "login_controller_unknown_country": "Unbekannt",
     "message_forwarded_message": "Weitergeleitete Nachricht",
     "message_forwarded_message_mobile": "Weitergeleitet von {from}, {date}",
@@ -335,15 +315,21 @@
     "message_attach_video_play": "Video abspielen",
     "conversation_select_modal_title": "Unterhaltung auswählen",
     "conversation_select_modal_contacts": "Kontakte",
-    "conversation_one_selected": "{name1}",
-    "conversation_two_selected": "{name1} und {name2}",
-    "conversation_many_selected": "{name1}, {name2} und {count} weitere",
     "phonebook_modal_title": "Telefonbuch",
     "phonebook_modal_deselect_all": "Auswahl aufheben",
     "phonebook_modal_select_all": "Alle auswählen",
     "phonebook_modal_empty": "Dein Telefonbuch ist leer.",
     "phonebook_modal_submit_active": "Importiere",
     "phonebook_modal_submit": "Kontakte importieren",
+    "welcome_header_md": "**Telegram** Web",
+    "welcome_text_1_md": "Die offizielle **Web-Oberfläche** für Telegram.",
+    "welcome_start_messaging": "Los geht's",
+    "welcome_fast_messaging_header": "Schnelles Messaging",
+    "welcome_fast_messaging_text": "Nachrichten mit Emojis direkt vom PC-Desktop oder Laptop verschicken",
+    "welcome_easy_sharing_header": "Einfach Dateien teilen",
+    "welcome_easy_sharing_text": "Teile Dateien jeder Art per Drag & Drop oder über das Anhangsymbol",
+    "welcome_powerful_tools_header": "Nützliche Funktionen",
+    "welcome_powerful_tools_text_md": "Durchsuche geteilte Medien und \nsetze individuelle Benachrichtigungen",
     "country_select_modal_country_ab": "Abchasien",
     "country_select_modal_country_af": "Afghanistan",
     "country_select_modal_country_ax": "Åland-Inseln",
