--- a/js/locales/es-es.json
+++ b/js/locales/es-es.json
@@ -1,9 +1,6 @@
 {
     "modal_search": "Buscar",
-    "modal_close": "Cerrar",
-    "modal_edit": "Editar",
     "modal_cancel": "Cancelar",
-    "modal_more": "Más...",
     "modal_next": "Siguiente",
     "modal_ok": "OK",
     "modal_done": "Hecho",
@@ -16,12 +13,13 @@
     "group_modal_menu_more": "Más",
     "group_modal_menu_delete_photo": "Eliminar foto",
     "group_modal_menu_edit_group": "Editar grupo",
-    "group_modal_menu_leave": "Dejar",
+    "group_modal_menu_leave_group": "Dejar el grupo",
     "group_modal_menu_delete_chat": "Eliminar chat",
     "group_modal_settings": "Ajustes",
     "group_modal_notifications": "Notificaciones",
     "group_modal_members": "Miembros",
     "group_modal_members_kick": "Expulsar",
+    "group_modal_members_unavailable": "La lista de miembros del grupo no está disponible.",
     "country_select_modal_title": "País",
     "settings_modal_title": "Ajustes",
     "settings_modal_menu_more": "Más",
@@ -72,9 +70,9 @@
     "user_modal_settings": "Ajustes",
     "user_modal_notifications": "Notificaciones",
     "user_modal_contact_info": "Información",
-    "media_modal_photo": "Foto",
-    "media_modal_photo_index": "Foto {pos} de {count}",
-    "media_modal_video": "Vídeo",
+    "media_modal_photo": "Photo",
+    "media_modal_photo_index": "Photo {pos} of {count}",
+    "media_modal_video": "Video",
     "media_modal_forward": "Reenviar",
     "media_modal_download": "Descargar",
     "media_modal_delete": "Eliminar",
@@ -116,7 +114,6 @@
     "confirm_modal_clipboard_file_send": "¿Quieres enviar archivo(s) desde el portapapeles?",
     "confirm_modal_clipboard_X_files_send": "{'one': '¿Quieres enviar un archivo desde el portapapeles?', 'other': '¿Quieres enviar {} archivos desde el portapapeles?'}",
     "confirm_modal_message_delete": "¿Quieres eliminar el mensaje?",
-    "confirm_modal_photo_delete": "¿Quieres eliminar la foto?",
     "confirm_modal_contacts_import": "Telegram sincronizará tus contactos para encontrar a tus amigos.",
     "confirm_modal_login_phone_correct": "¿Es correcto este número?",
     "confirm_modal_forward_to_peer": "¿Reenviar a {peer}?",
@@ -132,7 +129,6 @@
     "confirm_modal_clipboard_files_send_submit": "Enviar",
     "confirm_modal_clipboard_file_send_submit": "Enviar",
     "confirm_modal_message_delete_submit": "Eliminar",
-    "confirm_modal_photo_delete_submit": "Eliminar",
     "confirm_modal_forward_message_submit": "Reenviar mensaje",
     "confirm_modal_share_photo_submit": "Reenviar foto",
     "confirm_modal_share_video_submit": "Reenviar vídeo",
@@ -145,10 +141,6 @@
     "contacts_modal_title": "Contactos",
     "contacts_modal_new_contact": "Nuevo contacto",
     "contacts_modal_empty_list": "Tu lista de contactos está vacía . Puedes {import-link: añadir un nuevo contacto} con su número de teléfono.",
-    "conversations_modal_forward_title": "Reenviar",
-    "conversations_modal_forward_submit": "Reenviar",
-    "conversations_modal_select_recipients": "Elige destinatarios",
-    "conversations_modal_recipients": "Destinatarios:",
     "contact_edit_modal_first_name": "Nombe",
     "contact_edit_modal_last_name": "Apellidos",
     "contact_edit_modal_title": "Editar contacto",
@@ -213,7 +205,6 @@
     "error_modal_phonebook_required_description": "Telegram necesita acceso a tu agenda para importar contactos.",
     "error_modal_username_occupied_description": "Lo siento, este apodo ya está ocupado.",
     "error_modal_media_not_supported_description": "Tu navegador no puede reproducir este archivo multimedia. Prueba descargándolo y abriéndolo en un reproductor independiente.",
-    "error_modal_username_not_found_description": "No hay una cuenta de Telegram con el apodo que entregaste.",
     "error_modal_bad_request_description": "Falta uno de los parámetros o es inválido.",
     "error_modal_unauthorized_description": "Esta acción requiere acceso autorizado. Por favor, {login-link: inicia sesión}.",
     "error_modal_forbidden_description": "No estás autorizado para esta acción.",
@@ -222,15 +213,13 @@
     "error_modal_internal_description": "Error interno del servidor. Por favor, reinténtalo más tarde.",
     "error_modal_tech_details": "Detalles técnicos aquí",
     "error_modal_multiple_open_tabs": "Por favor, cierra las otras pestañas de la app de Telegram.",
-    "head_telegram": "Telegram",
     "head_new_group": "Nuevo grupo",
     "head_new_contact": "Nuevo contacto",
     "head_contacts": "Contactos",
     "head_contacts_title": "Contactos",
-    "head_telegram_faq": "Preguntas frecuentes",
+    "im_found_title": "Búsqueda global",
     "head_settings": "Ajustes",
     "head_log_out": "Cerrar sesión",
-    "head_peer_more": "Más",
     "head_edit_messages": "Editar mensajes",
     "head_media_photos": "Fotos",
     "head_media_video": "Vídeos",
@@ -254,7 +243,6 @@
     "im_contacts_title": "Contactos",
     "im_settings": "Ajustes",
     "im_conversations": "Conversaciones",
-    "im_found_title": "Búsqueda global",
     "im_messages": "Mensajes",
     "im_no_contacts": "Aún sin contactos",
     "im_get_started_long": "Comienza añadiendo un contacto con quien chatear",
@@ -292,9 +280,7 @@
     "login_sign_in": "Registrarse",
     "login_enter_number_description": "Por favor, escoge tu país y pon tu número de teléfono completo.",
     "login_incorrect_number": "Número de teléfono incorrecto",
-    "login_code_input_placeholder": "Código",
-    "login_tel_input_placeholder": "Número de teléfono",
-    "login_country_select_placeholder": "País",
+    "login_tel_input_placeholder": "Inserta tu número de teléfono",
     "login_generating_key": "Generando claves",
     "login_generating_keys_info": "Las claves sólo se generan una vez. Puede tardar unos minutos en dispositivos lentos. Por favor, ten paciencia.",
     "login_edit_number": "Editar el número de teléfono",
@@ -315,12 +301,6 @@
     "login_last_name": "Apellidos",
     "login_signing_up": "Registrándose",
     "login_sign_up": "Registrarse",
-    "login_about_title": "Acerca de",
-    "login_about_desc1_md": "La versión web de Telegram es la forma gratuita, rápida y segura para disfrutar la mayoría de las características de **Telegram** en tu **navegador web**.",
-    "login_about_desc2_md": "Está siempre sincronizada con la **aplicación de Telegram** en tu dispositivo móvil, lo que la convierte en una herramienta perfecta para la mensajería y compartir archivos.",
-    "login_about_desc3_md": "Nuestro {source-link: código fuente} es abierto, así que todos pueden contribuir.",
-    "login_about_intro": "Te damos la bienvenida a la versión web oficial de Telegram.",
-    "login_about_learn": "Aprende más",
     "login_controller_unknown_country": "Desconocido",
     "message_forwarded_message": "Mensaje reenviado",
     "message_forwarded_message_mobile": "Reenviado de {from}, {date}",
@@ -335,15 +315,21 @@
     "message_attach_video_play": "Ver vídeo",
     "conversation_select_modal_title": "Seleccionar conversación",
     "conversation_select_modal_contacts": "Contactos",
-    "conversation_one_selected": "{name1}",
-    "conversation_two_selected": "{name1} y {name2}",
-    "conversation_many_selected": "{name1}, {name2} y {count} más",
     "phonebook_modal_title": "Agenda de contactos",
     "phonebook_modal_deselect_all": "Descartar todos",
     "phonebook_modal_select_all": "Elegir todos",
     "phonebook_modal_empty": "Tu agenda de contactos está vacía.",
     "phonebook_modal_submit_active": "Importando",
     "phonebook_modal_submit": "Importar contactos",
+    "welcome_header_md": "**Telegram** Web",
+    "welcome_text_1_md": "El **cliente web** oficial de Telegram.",
+    "welcome_start_messaging": "Comenzar a conversar",
+    "welcome_fast_messaging_header": "Mensajería rápida",
+    "welcome_fast_messaging_text": "Envía mensajes con emoticonos directamente desde tu computador o portátil.",
+    "welcome_easy_sharing_header": "Comparte archivos fácilmente",
+    "welcome_easy_sharing_text": "Comparte cualquier archivo arrastrando y soltando, o pulsando el ícono para adjuntar.",
+    "welcome_powerful_tools_header": "Herramientas potentes",
+    "welcome_powerful_tools_text_md": "Navega por los archivos compartidos por tipo \ny establece notificaciones personalizadas.",
     "country_select_modal_country_ab": "Abjasia",
     "country_select_modal_country_af": "Afganistán",
     "country_select_modal_country_ax": "Islas Åland",
