--- a/js/locales/it-it.json
+++ b/js/locales/it-it.json
@@ -1,9 +1,6 @@
 {
     "modal_search": "Cerca",
-    "modal_close": "Chiudi",
-    "modal_edit": "Modifica",
     "modal_cancel": "Annulla",
-    "modal_more": "Più...",
     "modal_next": "Avanti",
     "modal_ok": "OK",
     "modal_done": "Fatto",
@@ -16,12 +13,13 @@
     "group_modal_menu_more": "Più",
     "group_modal_menu_delete_photo": "Elimina foto",
     "group_modal_menu_edit_group": "Modifica gruppo",
-    "group_modal_menu_leave": "Lascia",
+    "group_modal_menu_leave_group": "Lascia gruppo",
     "group_modal_menu_delete_chat": "Elimina chat",
     "group_modal_settings": "Impostazioni",
     "group_modal_notifications": "Notifiche",
     "group_modal_members": "Membri",
     "group_modal_members_kick": "Espelli",
+    "group_modal_members_unavailable": "Lista membri gruppo non disponibile.",
     "country_select_modal_title": "Nazione",
     "settings_modal_title": "Impostazioni",
     "settings_modal_menu_more": "Più",
@@ -29,8 +27,8 @@
     "settings_modal_set_photo": "Imposta foto profilo",
     "settings_modal_photo_updating": "Caricamento",
     "settings_modal_edit_profile": "Modifica profilo",
-    "settings_modal_edit_username": "Cambia username",
-    "settings_modal_empty_username_set": "Imposta username",
+    "settings_modal_edit_username": "Cambia nome utente",
+    "settings_modal_empty_username_set": "Imposta nome utente",
     "settings_modal_terminate_sessions": "Termina tutte le sessioni",
     "settings_modal_settings": "Impostazioni",
     "settings_modal_notification_alert": "Avvisi di notifica",
@@ -39,8 +37,8 @@
     "settings_modal_language": "Lingua",
     "settings_modal_notifications": "Notifiche desktop",
     "settings_modal_sound": "Suono",
-    "settings_modal_enter_send_description_md": "**Invio** - invia messaggio, **Shift + Invio** - a capo",
-    "settings_modal_ctrl_enter_send_description_md": "**Ctrl + Invio** - invia messaggio, **Invio** - a capo",
+    "settings_modal_enter_send_description_md": "**Invio** - invia messaggio, **Shift + Invio** - nuova riga",
+    "settings_modal_ctrl_enter_send_description_md": "**Ctrl + Invio** - invia messaggio, **Invio** - nuova riga",
     "settings_modal_send_on_enter": "Spedisci con Invio",
     "settings_modal_about": "Info",
     "settings_modal_source_code_github": "Codice sorgente su GitHub",
@@ -52,9 +50,9 @@
     "profile_edit_last_name": "Cognome",
     "profile_edit_submit": "Salva",
     "profile_edit_submit_active": "Salvataggio...",
-    "username_edit_modal_title": "Cambia username",
-    "username_edit_placeholder": "Username",
-    "username_edit_description_md": "Puoi scegliere un username  su **Telegram**. Se lo fai,  le persone potranno cercarti con il tuo nome utente e scriverti senza sapere il tuo numero di telefono. \n\nPuoi usare i caratteri a-z, 0-9 e l'underscore. La lunghezza minima è 5 caratteri.",
+    "username_edit_modal_title": "Cambia utente",
+    "username_edit_placeholder": "Nome utente",
+    "username_edit_description_md": "Puoi scegliere un nome utente  su **Telegram**. Se lo fai,  le persone potranno cercarti con il tuo nome utente e scriverti senza sapere il tuo numero di telefono. \n\nPuoi usare i caratteri a-z, 0-9 e l'underscore. La lunghezza minima è 5 caratteri.",
     "username_edit_submit": "Salva",
     "username_edit_submit_active": "Salvataggio...",
     "user_modal_menu_more": "Più",
@@ -68,7 +66,7 @@
     "user_modal_delete_chat": "Elimina Chat",
     "user_modal_info": "Info",
     "user_modal_phone": "Telefono",
-    "user_modal_username": "Username",
+    "user_modal_username": "Nome utente",
     "user_modal_settings": "Impostazioni",
     "user_modal_notifications": "Notifiche",
     "user_modal_contact_info": "Informazioni contatto",
@@ -96,16 +94,16 @@
     "format_size_progress": "{done} su {total}",
     "relative_time_pluralize_minutes_ago": "{'one' : '1 minuto fa', 'other' : '{} minuti fa'}",
     "relative_time_pluralize_hours_ago": "{'one' : '1 ora fa', 'other' : '{} ore fa'}",
-    "relative_time_just_now": "adesso",
+    "relative_time_just_now": "proprio ora",
     "changelog_modal_header_recent_updates_md": "Update recenti di **Telegram Web**",
     "changelog_modal_header_new_updates_md": "**Telegram Web** è stato aggiornato!",
     "changelog_modal_title_current_version": "versione corrente",
-    "group_create_contacts_modal_title": "Nuovo gruppo",
-    "group_create_modal_title": "Crea gruppo",
+    "group_create_contacts_modal_title": "Nuovo Gruppo",
+    "group_create_modal_title": "Crea Gruppo",
     "group_create_name": "Nome gruppo",
-    "group_create_submit": "Crea gruppo",
+    "group_create_submit": "Crea Gruppo",
     "group_create_submit_active": "Creazione...",
-    "group_edit_modal_title": "Modifica gruppo",
+    "group_edit_modal_title": "Modifica Gruppo",
     "group_edit_name": "Nome gruppo",
     "group_edit_submit": "Salva",
     "group_edit_submit_active": "Salvataggio...",
@@ -116,13 +114,12 @@
     "confirm_modal_clipboard_file_send": "Sei sicuro di inviare il(i) file presenti negli appunti?",
     "confirm_modal_clipboard_X_files_send": "{'one': 'Sei sicuro di inviare il file dagli appunti?', 'other': 'Sei sicuro di inviare {} file dagli appunti?'}",
     "confirm_modal_message_delete": "Sei sicuro di voler eliminare il messaggio?",
-    "confirm_modal_photo_delete": "Sei sicuro di voler eliminare la foto?",
-    "confirm_modal_contacts_import": "Telegram sincronizzerà ora i tuoi contatti per cercare i tuoi amici.",
+    "confirm_modal_contacts_import": "Telegram procederà adesso a sincronizzare la tua rubrica per cercare i tuoi amici.",
     "confirm_modal_login_phone_correct": "Il tuo numero di telefono è giusto?",
     "confirm_modal_forward_to_peer": "Inoltra a {peer}?",
     "confirm_modal_send_to_peer": "Invia a {peer}?",
     "confirm_modal_share_file_peer": "Condividi con {peer}?",
-    "confirm_modal_apply_lang_with_reload_md": "Riavviare l'app per impostare la lingua?",
+    "confirm_modal_apply_lang_with_reload_md": "Riavviare l'App per impostare la lingua?",
     "confirm_modal_migrate_to_https_md": "Telegram Web supporta un ulteriore tipo di crittografia SSL. Vuoi passare alla versione HTTPS?\nLa versione HTTP sarà disabilitata presto.",
     "confirm_modal_resize_desktop_md": "Vuoi passare alla versione desktop?",
     "confirm_modal_resize_mobile_md": "Vuoi passare alla versione mobile?",
@@ -132,23 +129,18 @@
     "confirm_modal_clipboard_files_send_submit": "Invia",
     "confirm_modal_clipboard_file_send_submit": "Invia",
     "confirm_modal_message_delete_submit": "Elimina",
-    "confirm_modal_photo_delete_submit": "Elimina",
     "confirm_modal_forward_message_submit": "Inoltra messaggi",
     "confirm_modal_share_photo_submit": "Inoltra foto",
     "confirm_modal_share_video_submit": "Inoltra video",
     "confirm_modal_share_contact_submit": "Invia contatto",
     "confirm_modal_share_file_submit": "Condividi file",
     "contacts_modal_edit_list": "Modifica",
-    "contacts_modal_edit_cancel": "Annulla",
+    "contacts_modal_edit_cancel": "Elimina",
     "contacts_modal_edit_delete": "Elimina",
     "contacts_modal_pluralize_new_group_members": "{'one': '1 partecipante', 'other': '{} partecipanti'}",
     "contacts_modal_title": "Contatti",
     "contacts_modal_new_contact": "Nuovo Contatto",
     "contacts_modal_empty_list": "La tua rubrica è vuota. Puoi {import-link: add new contact} per numero telefonico.",
-    "conversations_modal_forward_title": "Inoltra",
-    "conversations_modal_forward_submit": "Inoltra",
-    "conversations_modal_select_recipients": "Scegli destinatari",
-    "conversations_modal_recipients": "Destinatari:",
     "contact_edit_modal_first_name": "Nome",
     "contact_edit_modal_last_name": "Cognome",
     "contact_edit_modal_title": "Modifica contatto",
@@ -209,11 +201,10 @@
     "error_modal_photo_too_small_description": "La foto che hai fornito è troppo piccola",
     "error_modal_no_phone_user_description_md": "Siamo spiacenti, non c'è alcun account **Telegram** associato al numero che hai fornito.",
     "error_modal_no_phone_users_description_md": "Siamo spiacenti, non c'è alcun account **Telegram** associato al numero che hai fornito.",
-    "error_modal_username_invalid_description": "Ci spiace, questo username non è consentito.",
+    "error_modal_username_invalid_description": "Ci spiace, questo nome utente non è consentito.",
     "error_modal_phonebook_required_description": "Telegram ha bisogno di accedere alla tua rubrica per importare i contatti.",
-    "error_modal_username_occupied_description": "Ci spiace, questo username è già stato preso",
+    "error_modal_username_occupied_description": "Ci spiace, questo nome utente è già stato preso",
     "error_modal_media_not_supported_description": "Il tuo browser non può riprodurre questo media. Prova a scaricarlo e ad aprirlo in un lettore esterno.",
-    "error_modal_username_not_found_description": "Non esiste alcun account Telegram con l'username che hai fornito.",
     "error_modal_bad_request_description": "Un parametro è mancante o errato.",
     "error_modal_unauthorized_description": "L'azione necessita dell'autorizzazione d'accesso. Per favore {login-link: log in}.",
     "error_modal_forbidden_description": "Non sei autorizzato a questa operazione.",
@@ -222,15 +213,13 @@
     "error_modal_internal_description": "Si è verificato un errore interno al server. Si prega di riprovare più tardi.",
     "error_modal_tech_details": "Dettagli tecnici qui",
     "error_modal_multiple_open_tabs": "Per favore chiudi le altre finestre dell'app di Telegram.",
-    "head_telegram": "Telegram",
-    "head_new_group": "Nuovo gruppo",
+    "head_new_group": "Nuovo Gruppo",
     "head_new_contact": "Nuovo Contatto",
     "head_contacts": "Contatti",
     "head_contacts_title": "Contatti",
-    "head_telegram_faq": "FAQ di Telegram",
+    "im_found_title": "Ricerca globale",
     "head_settings": "Impostazioni",
     "head_log_out": "Disconnetti",
-    "head_peer_more": "Altro",
     "head_edit_messages": "Modifica messaggi",
     "head_media_photos": "Foto",
     "head_media_video": "Video",
@@ -244,17 +233,16 @@
     "head_one_typing": "{name1} sta scrivendo{dots}",
     "head_two_typing": "{name1}, {name2}{dots}",
     "head_many_typing": "{name1}+{names}{dots}",
-    "head_waiting_for_network": "Attendo la rete",
+    "head_waiting_for_network": "In attesa di connettività",
     "head_retry": "Riprova",
     "head_connecting": "Connessione in corso",
     "footer_twitter": "Twitter",
-    "im_new_group": "Nuovo gruppo",
+    "im_new_group": "Nuovo Gruppo",
     "im_new_contact": "Nuovo Contatto",
     "im_contacts": "Contatti",
     "im_contacts_title": "Contatti",
     "im_settings": "Impostazioni",
     "im_conversations": "Conversazioni",
-    "im_found_title": "Ricerca globale",
     "im_messages": "Messaggi",
     "im_no_contacts": "Ancora nessun contatto",
     "im_get_started_long": "Inizia aggiungendo contatti alla chat",
@@ -292,9 +280,7 @@
     "login_sign_in": "Accedi",
     "login_enter_number_description": "Inserisci il tuo numero telefonico completo.",
     "login_incorrect_number": "Numero telefonico errato",
-    "login_code_input_placeholder": "Codice",
-    "login_tel_input_placeholder": "Numero di telefono",
-    "login_country_select_placeholder": "Nazione",
+    "login_tel_input_placeholder": "Inserisci il tuo numero",
     "login_generating_key": "Generazione chiavi",
     "login_generating_keys_info": "Le chiavi vengono generate una volta soltanto. Questa operazione potrebbe impiegare alcuni minuti su dispositivi lenti, si prega di attendere.",
     "login_edit_number": "Modifica numero di telefono",
@@ -315,12 +301,6 @@
     "login_last_name": "Cognome",
     "login_signing_up": "Registrazione in corso",
     "login_sign_up": "Registrati",
-    "login_about_title": "Info",
-    "login_about_desc1_md": "L'app web di Telegram è un modo gratis, veloce e sicuro di avere la maggior parte delle feature di **Telegram** sul tuo **browser web**.",
-    "login_about_desc2_md": "È sempre sincronizzato con le **app Telegram** sul tuo dispositivo mobile, il che lo rende lo strumento perfetto per messaggiare e condividere file.",
-    "login_about_desc3_md": "Il nostro {source-link: source code} è aperto, così ognuno può contribuire.",
-    "login_about_intro": "Benvenuto nell'app web ufficiale di Telegram.",
-    "login_about_learn": "Ulteriori informazioni",
     "login_controller_unknown_country": "Sconosciuto",
     "message_forwarded_message": "Messaggio inoltrato",
     "message_forwarded_message_mobile": "Inoltrato da {from},{date}",
@@ -335,15 +315,21 @@
     "message_attach_video_play": "Riproduci video",
     "conversation_select_modal_title": "Seleziona conversazione",
     "conversation_select_modal_contacts": "Contatti",
-    "conversation_one_selected": "{name1}",
-    "conversation_two_selected": "{name1} e {name2}",
-    "conversation_many_selected": "{name1}, {name2} e altri {count}",
     "phonebook_modal_title": "Rubrica",
     "phonebook_modal_deselect_all": "Deseleziona tutto",
     "phonebook_modal_select_all": "Seleziona tutto",
     "phonebook_modal_empty": "La tua rubrica è vuota.",
     "phonebook_modal_submit_active": "Importazione",
     "phonebook_modal_submit": "Importa contatti",
+    "welcome_header_md": "**Telegram** Web",
+    "welcome_text_1_md": "**Client web** ufficiale di Telegram.",
+    "welcome_start_messaging": "Inizia a Messaggiare",
+    "welcome_fast_messaging_header": "Messaggi veloci",
+    "welcome_fast_messaging_text": "Manda messaggi con il supporto arricchito di emoji direttamente dal tuo computer desktop o portatile",
+    "welcome_easy_sharing_header": "Condivisione semplice di file",
+    "welcome_easy_sharing_text": "Condividi file di qualunque tipo usando il drag-and-drop o l'icona della graffetta",
+    "welcome_powerful_tools_header": "Strumenti potenti",
+    "welcome_powerful_tools_text_md": "Sfoglia materiale condiviso e file per tipologia\ne personalizza le notitiche",
     "country_select_modal_country_ab": "Abkhazia",
     "country_select_modal_country_af": "Afghanistan",
     "country_select_modal_country_ax": "Isole Aland",
