--- a/js/locales/nl-nl.json
+++ b/js/locales/nl-nl.json
@@ -1,9 +1,6 @@
 {
     "modal_search": "Zoeken",
-    "modal_close": "Sluit",
-    "modal_edit": "Wijzig",
     "modal_cancel": "Annuleren",
-    "modal_more": "Meer",
     "modal_next": "Volgende",
     "modal_ok": "OK",
     "modal_done": "Gereed",
@@ -16,12 +13,13 @@
     "group_modal_menu_more": "Meer",
     "group_modal_menu_delete_photo": "Foto verwijderen",
     "group_modal_menu_edit_group": "Groep bewerken",
-    "group_modal_menu_leave": "Verlaten",
+    "group_modal_menu_leave_group": "Groep verlaten",
     "group_modal_menu_delete_chat": "Chat verwijderen",
     "group_modal_settings": "Instellingen",
     "group_modal_notifications": "Meldingen",
     "group_modal_members": "Deelnemers",
     "group_modal_members_kick": "Verwijderen",
+    "group_modal_members_unavailable": "Deelnemerslijst is niet beschikbaar.",
     "country_select_modal_title": "Land",
     "settings_modal_title": "Instellingen",
     "settings_modal_menu_more": "Meer",
@@ -116,7 +114,6 @@
     "confirm_modal_clipboard_file_send": "Bestand(en) echt vanaf klembord versturen?",
     "confirm_modal_clipboard_X_files_send": "{'one': 'Weet je zeker dat het je het bestand van het klembord wilt versturen?', 'other': 'weet je zeker dat je {} bestanden van het klembord wilt versturen?'}",
     "confirm_modal_message_delete": "Bericht echt verwijderen?",
-    "confirm_modal_photo_delete": "Foto echt verwijderen?",
     "confirm_modal_contacts_import": "Telegram zal nu je contacten synchroniseren om je vrienden te kunnen vinden.",
     "confirm_modal_login_phone_correct": "Is dit telefoonnummer juist?",
     "confirm_modal_forward_to_peer": "Doorsturen naar {peer}?",
@@ -132,7 +129,6 @@
     "confirm_modal_clipboard_files_send_submit": "Stuur",
     "confirm_modal_clipboard_file_send_submit": "Stuur",
     "confirm_modal_message_delete_submit": "Verwijder",
-    "confirm_modal_photo_delete_submit": "Verwijder",
     "confirm_modal_forward_message_submit": "Bericht doorsturen",
     "confirm_modal_share_photo_submit": "Foto doorsturen",
     "confirm_modal_share_video_submit": "Video doorsturen",
@@ -145,10 +141,6 @@
     "contacts_modal_title": "Contacten",
     "contacts_modal_new_contact": "Nieuw contact",
     "contacts_modal_empty_list": "Je lijst met contacten is leeg. Je kunt een {import-link: contact toevoegen} aan de hand van het telefoonnummer.",
-    "conversations_modal_forward_title": "Doorsturen",
-    "conversations_modal_forward_submit": "Doorsturen",
-    "conversations_modal_select_recipients": "Ontvangers kiezen",
-    "conversations_modal_recipients": "Ontvangers:",
     "contact_edit_modal_first_name": "Voornaam",
     "contact_edit_modal_last_name": "Achternaam",
     "contact_edit_modal_title": "Contact bewerken",
@@ -323,9 +315,6 @@
     "message_attach_video_play": "Video afspelen",
     "conversation_select_modal_title": "Chat selecteren",
     "conversation_select_modal_contacts": "Contacten",
-    "conversation_one_selected": "{name1}",
-    "conversation_two_selected": "{name1} en {name2}",
-    "conversation_many_selected": "{name1}, {name2} en {count} meer",
     "phonebook_modal_title": "Telefoonboek",
     "phonebook_modal_deselect_all": "Alles deselecteren",
     "phonebook_modal_select_all": "Alles selecteren",
@@ -340,7 +329,7 @@
     "welcome_easy_sharing_header": "Makkelijk bestanden delen",
     "welcome_easy_sharing_text": "Deel bestanden van een willekeurig type door middel van slepen en neerzetten of het bijlage-icoon.",
     "welcome_powerful_tools_header": "Krachtige hulpmiddelen",
-    "welcome_powerful_tools_text_md": "Blader door gedeelde media en bestanden\nen stel aangepaste meldingen in. ",
+    "welcome_powerful_tools_text_md": "Blader door gedeelde media en bestanden\nen stel aangepaste meldingen in,",
     "country_select_modal_country_ab": "Abchazië",
     "country_select_modal_country_af": "Afghanistan",
     "country_select_modal_country_ax": "Åland",
