--- a/js/locales/pt-br.json
+++ b/js/locales/pt-br.json
@@ -1,9 +1,6 @@
 {
     "modal_search": "Pesquisar",
-    "modal_close": "Fechar",
-    "modal_edit": "Editar",
     "modal_cancel": "Cancelar",
-    "modal_more": "Mais...",
     "modal_next": "Próxima",
     "modal_ok": "OK",
     "modal_done": "Pronto",
@@ -16,12 +13,13 @@
     "group_modal_menu_more": "Mais",
     "group_modal_menu_delete_photo": "Excluir foto",
     "group_modal_menu_edit_group": "Editar grupo",
-    "group_modal_menu_leave": "Sair",
+    "group_modal_menu_leave_group": "Sair do grupo",
     "group_modal_menu_delete_chat": "Apagar chat",
     "group_modal_settings": "Configurações",
     "group_modal_notifications": "Notificações",
     "group_modal_members": "Membros",
     "group_modal_members_kick": "Remover",
+    "group_modal_members_unavailable": "Lista de membros do grupo está indisponível.",
     "country_select_modal_title": "País",
     "settings_modal_title": "Configurações",
     "settings_modal_menu_more": "Mais",
@@ -72,9 +70,9 @@
     "user_modal_settings": "Configurações",
     "user_modal_notifications": "Notificações",
     "user_modal_contact_info": "Informação do contato",
-    "media_modal_photo": "Foto",
-    "media_modal_photo_index": "Foto {pos} de {count}",
-    "media_modal_video": "Vídeo",
+    "media_modal_photo": "Photo",
+    "media_modal_photo_index": "Photo {pos} of {count}",
+    "media_modal_video": "Video",
     "media_modal_forward": "Encaminhar",
     "media_modal_download": "Baixar",
     "media_modal_delete": "Apagar",
@@ -116,14 +114,13 @@
     "confirm_modal_clipboard_file_send": "Você tem certeza que deseja enviar arquivo(s) para a área de transferência?",
     "confirm_modal_clipboard_X_files_send": "{'one': 'Você tem certeza que deseja enviar o arquivo para a área de transferência?', 'other': 'Você tem certeza que deseja enviar {} arquivos para a área de transferência?'}",
     "confirm_modal_message_delete": "Você tem certeza que deseja apagar esta mensagem?",
-    "confirm_modal_photo_delete": "Você tem certeza que deseja apagar a foto?",
     "confirm_modal_contacts_import": "Telegram sincronizará os seus contatos para encontrar seus amigos.",
     "confirm_modal_login_phone_correct": "O telefone está correto?",
     "confirm_modal_forward_to_peer": "Encaminhar para {peer}?",
     "confirm_modal_send_to_peer": "Enviar para {peer}?",
     "confirm_modal_share_file_peer": "Compartilhar com {peer}?",
     "confirm_modal_apply_lang_with_reload_md": "Recarregar o aplicativo para aplicar a linguagem?",
-    "confirm_modal_migrate_to_https_md": "Telegram Web agora suporta adicionais encriptações SSL. Você deseja alterar para HTTPS?\nA versão HTTP será desabilitada em breve.",
+    "confirm_modal_migrate_to_https_md": "Telegram Web agora suporta adicionais encriptações SSL. Você deseja alterar para HTTPS?%s\nA versão HTTP será desabilitada em breve.",
     "confirm_modal_resize_desktop_md": "Você deseja alterar para a versão desktop?",
     "confirm_modal_resize_mobile_md": "Você deseja alterar para a versão mobile?",
     "confirm_modal_are_u_sure": "Você tem certeza?",
@@ -132,7 +129,6 @@
     "confirm_modal_clipboard_files_send_submit": "Enviar",
     "confirm_modal_clipboard_file_send_submit": "Enviar",
     "confirm_modal_message_delete_submit": "Apagar",
-    "confirm_modal_photo_delete_submit": "Apagar",
     "confirm_modal_forward_message_submit": "Encaminhar mensagem",
     "confirm_modal_share_photo_submit": "Encaminhar foto",
     "confirm_modal_share_video_submit": "Encaminhar vídeo",
@@ -145,10 +141,6 @@
     "contacts_modal_title": "Contatos",
     "contacts_modal_new_contact": "Novo Contato",
     "contacts_modal_empty_list": "Sua lista de contatos está vazia. Você pode {import-link: adicionar novo contato} pelo número de telefone.",
-    "conversations_modal_forward_title": "Encaminhar",
-    "conversations_modal_forward_submit": "Encaminhar",
-    "conversations_modal_select_recipients": "Selecione os destinatários",
-    "conversations_modal_recipients": "Destinatários:",
     "contact_edit_modal_first_name": "Nome",
     "contact_edit_modal_last_name": "Sobrenom",
     "contact_edit_modal_title": "Editar Contato",
@@ -213,7 +205,6 @@
     "error_modal_phonebook_required_description": "Telegram precisa acessar a sua agenda telefônica para importar contatos.",
     "error_modal_username_occupied_description": "Desculpe, nome de usuário em uso.",
     "error_modal_media_not_supported_description": "Seu navegador não pode visualizar este tipo de mídia. Tente baixar o arquivo e abrí-lo em outro reprodutor. ",
-    "error_modal_username_not_found_description": "Não existe nenhuma conta do Telegram com o número informado.",
     "error_modal_bad_request_description": "Um dos parâmetros em falta ou inválido.",
     "error_modal_unauthorized_description": "Essa ação requer autorização. Por favor {login-link: entre}.",
     "error_modal_forbidden_description": "Você não tem permissão para esta ação.",
@@ -222,15 +213,13 @@
     "error_modal_internal_description": "Erro interno do servidor. Por favor, tente novamente mais tarde.",
     "error_modal_tech_details": "Detalhes técnicos aqui",
     "error_modal_multiple_open_tabs": "Por favor, fechar outras abas de aplicativos do Telegram.",
-    "head_telegram": "Telegram",
     "head_new_group": "Novo Grupo",
     "head_new_contact": "Novo Contato",
     "head_contacts": "Contatos",
     "head_contacts_title": "Contatos",
-    "head_telegram_faq": "FAQ do Telegram",
+    "im_found_title": "Pesquisa global",
     "head_settings": "Configurações",
     "head_log_out": "Sair",
-    "head_peer_more": "Mais",
     "head_edit_messages": "Editar mensagens",
     "head_media_photos": "Fotos",
     "head_media_video": "Vídeos",
@@ -254,7 +243,6 @@
     "im_contacts_title": "Contatos",
     "im_settings": "Configurações",
     "im_conversations": "Conversas",
-    "im_found_title": "Pesquisa global",
     "im_messages": "Mensagens",
     "im_no_contacts": "Nenhum contato ainda",
     "im_get_started_long": "Comece adicionando um contato para conversar",
@@ -292,9 +280,7 @@
     "login_sign_in": "Entrar",
     "login_enter_number_description": "Escolha seu país e insira seu número de telefone com DDD.",
     "login_incorrect_number": "Número de telefone incorreto.",
-    "login_code_input_placeholder": "Código",
-    "login_tel_input_placeholder": "Número de telefone",
-    "login_country_select_placeholder": "País",
+    "login_tel_input_placeholder": "Insira seu número de telefone",
     "login_generating_key": "Gerando chaves",
     "login_generating_keys_info": "Chaves só são geradas uma vez. Isso pode levar mais tempo em dispositivos lentos, seja paciente.",
     "login_edit_number": "Editar número de telefone",
@@ -315,12 +301,6 @@
     "login_last_name": "Sobrenome",
     "login_signing_up": "Inscrevendo-se",
     "login_sign_up": "Inscrever-se",
-    "login_about_title": "Sobre",
-    "login_about_desc1_md": "O cliente web do Telegram é grátis, rápido e seguro para usufruir de muitas das funcionalidades do **Telegram** diretamente do seu **navegador**.",
-    "login_about_desc2_md": "Isso tudo sincronizado com o **aplicativo do Telegram** em seu dispositivo celular, o que torna uma ferramenta perfeita para mensagens e compartilhamento de arquivos.",
-    "login_about_desc3_md": "Nosso {source-link: source code} é aberto, então todos podem contribuir.",
-    "login_about_intro": "Bem-vindo ao cliente web oficial do Telegram.",
-    "login_about_learn": "Saiba mais",
     "login_controller_unknown_country": "Desconhecido",
     "message_forwarded_message": "Encaminhar mensagem",
     "message_forwarded_message_mobile": "Encaminhado de {from}, {date}",
@@ -335,15 +315,21 @@
     "message_attach_video_play": "Reproduzir vídeo",
     "conversation_select_modal_title": "Selecionar conversa",
     "conversation_select_modal_contacts": "Contatos",
-    "conversation_one_selected": "{name1}",
-    "conversation_two_selected": "{name1} e {name2}",
-    "conversation_many_selected": "{name1}, {name2} e {count} mais",
     "phonebook_modal_title": "Agenda telefônica",
     "phonebook_modal_deselect_all": "Cancelar seleção",
     "phonebook_modal_select_all": "Selecionar tudo",
     "phonebook_modal_empty": "Sua agenda telefônica está vazia.",
     "phonebook_modal_submit_active": "Importando",
     "phonebook_modal_submit": "Importar contatos",
+    "welcome_header_md": "**Telegram** Web",
+    "welcome_text_1_md": "O **cliente web** oficial do Telegram.",
+    "welcome_start_messaging": "Comece a Conversar",
+    "welcome_fast_messaging_header": "Conversas rápidas",
+    "welcome_fast_messaging_text": "Envie mensagem com um rico suporte emoji direto de seu computador ou notebook",
+    "welcome_easy_sharing_header": "Fácil compartilhamento de arquivos",
+    "welcome_easy_sharing_text": "Compartilhe arquivos de qualquer tipo usando arrastar-e-soltar ou o ícone de anexo.",
+    "welcome_powerful_tools_header": "Ferramentas úteis",
+    "welcome_powerful_tools_text_md": "Procure mídias e arquivos compartilhados por tipo\ne defina notificações customizadas",
     "country_select_modal_country_ab": "Abkhazia",
     "country_select_modal_country_af": "Afghanistan",
     "country_select_modal_country_ax": "Åland Islands",
